<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.amaliaintansafura_1202150248_studycase4.MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_asynctaks"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/size_teks"
        android:textStyle="bold" />

    <Button
        android:id="@+id/namamahasiswa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_marginTop="30dp"
        android:text="@string/list_nama_mahasiswa"
        android:layout_centerHorizontal="true"
        android:onClick="NamaMahasiswa"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/namamahasiswa"
        android:layout_marginTop="10dp"
        android:text="@string/cari_gambar"
        android:onClick="cariGambar"/>

</RelativeLayout>
