<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.amaliaintansafura_1202150248_studycase4.PencariGambar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/listnama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/cari_gambar__"
            android:textSize="@dimen/size_teks"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listnama"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="15"
            android:hint="@string/masukkan_url_gambar"
            android:text="https://3.bp.blogspot.com/-Hvs1KkWzJ1A/VtPnwDq7noI/AAAAAAAAACQ/mxRJTi6RoKg/s1600/tumblr_nu0fqfvmwS1slrwx3o1_1280.jpg"/>
        <Button
            android:id="@+id/startAstnctax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/url"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="StartTask"
            android:text="@string/klik_untuk_mencari_gambar" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="267dp"
            android:layout_height="300dp"
            android:layout_below="@id/startAstnctax"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </RelativeLayout>
</ScrollView>
